// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders correctly 1`] = `
<Navbar
  color="princess-pink"
  expand={false}
  light={true}
  tag="nav"
>
  <NavbarBrand
    data-test-id="landing-page-link"
    tag={[Function]}
    to="/"
  >
    Game
  </NavbarBrand>
</Navbar>
`;

exports[`Navigation url WITH \`profile=true\` renders profile behind hidden url params 1`] = `
<Navbar
  color="princess-pink"
  expand={false}
  light={true}
  tag="nav"
>
  <NavbarBrand
    data-test-id="landing-page-link"
    tag={[Function]}
    to="/?profile=true"
  >
    Game
  </NavbarBrand>
  <Nav
    className="ml-auto"
    navbar={true}
    tag="ul"
    vertical={false}
  >
    <NavItem
      tag="li"
    >
      <NavLink
        tag={[Function]}
        to="/profile?profile=true"
      >
        Profile
      </NavLink>
    </NavItem>
  </Nav>
</Navbar>
`;
